[tool.poetry]
name = "environ_secretmanager"
version = "0.1.0"
description = ""
authors = ["Hareem Adderley <hadderley@kingpinapps.com>"]
readme = "README.md"
packages = [{include = "environ_secretmanager"}]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-secret-manager = "^2.18.0"
django-environ = "^0.11.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
commitizen = "^2.42.0"
faker = "*"
flake8 = "*"
pylint = "*"
pylint-plugin-utils = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
